<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFrag"
    android:background="@drawable/white_papers_tiled"
    android:id="@+id/layout">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/account_form_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <TextView

        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:gravity="center"
        android:text="What If you already had an account? Then you would sign in!"
        android:textAppearance="@style/TextAppearance.WhatIf.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/account_form_top"
        app:layout_constraintWidth_max="460dp"
        app:layout_constraintWidth_percent="0.72" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintWidth_percent="0.5" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:hint="User Name"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintWidth_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp"
        style="@style/Widget.WhatIf.Button.Primary"
        android:layout_width="175dp"
        android:layout_height="@dimen/button_height_hero"
        android:layout_marginTop="@dimen/space_16"
        android:text="create account"
        app:layout_constraintEnd_toStartOf="@+id/signIn"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_account"
        style="@style/Widget.WhatIf.Button.Secondary"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="@dimen/space_24"
        android:layout_marginEnd="@dimen/space_64"
        android:text="back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn"
        style="@style/Widget.WhatIf.Button.Primary"
        android:layout_width="130dp"
        android:layout_height="@dimen/button_height_hero"
        android:layout_marginStart="@dimen/space_24"
        android:layout_marginTop="@dimen/space_16"
        android:text="Sign In"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/signUp"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintWidth_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>
